<resources>
    <string name="app_name">Avila</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="team">Team</string>
    <string name="contact_now">Contact Now</string>
    <string name="afila_media_karya">Afila Media Karya</string>
    <string name="about">About</string>
    <string name="textt">We ready to help build your digital product. There are Sosial Media Management, Mobile Apps, Webite, and UI/UX Design</string>
</resources>